css/style.css
/* ... */
/* line 305, ../../Arafath/CL/Cl November/226. Construction/HTML/scss/theme-default.scss */
.modal-backdrop {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 999;
  background-color: #000;
}

/* line 317, ../../Arafath/CL/Cl November/226. Construction/HTML/scss/theme-default.scss */
.custom_search_pop .modal-content .serch_form {
  position: relative;
}

/* line 319, ../../Arafath/CL/Cl November/226. Construction/HTML/scss/theme-default.scss */
.custom_search_pop .modal-content .serch_form input {
  width: 100%;
  height: 50px;
  background: #fff;
  color: #fff;
  border: none;
  padding-left: 20px;
  color: #000;
  font-size: 15px;
  padding-right: 120px;
}

/* line 329, ../../Arafath/CL/Cl November/226. Construction/HTML/scss/theme-default.scss */
.custom_search_pop .modal-content .serch_form input:placeholder {
  color: #000;
  font-size: 15px;
}

/* line 333, ../../Arafath/CL/Cl November/226. Construction/HTML/scss/theme-default.scss */
.custom_search_pop .modal-content .serch_form input:focus {
  outline: none;
}

/* line 337, ../../Arafath/CL/Cl November/226. Construction/HTML/scss/theme-default.scss */
.custom_search_pop .modal-content .serch_form button {
  position: absolute;
  right: 0;
  top: 0;
  font-size: 16px;
  height: 100%;
  padding: 20px;
  color: #fff;
  background: #FF3414;
  display: inline-block;
  border: none;
  line-height: 50px;
  height: 50px;
  padding: 0 30px;
  cursor: pointer;
}

/* line 1, ../../Arafath/CL/Cl November/226. Construction/HTML/scss/_btn.scss */
.boxed-btn {
  background: #fff;
  color: #F0542C;
  display: inline-block;
  padding: 18px 44px;
  font-family: "Raleway", sans-serif;
  font-size: 14px;
  font-weight: 400;
  border: 0;
  border: 1px solid #F0542C;
  letter-spacing: 3px;
  text-align: center;
  color: #F0542C !important;
  text-transform: uppercase;
  cursor: pointer;
}

/* line 17, ../../Arafath/CL/Cl November/226. Construction/HTML/scss/_btn.scss */
.boxed-btn:hover {
  background: #F0542C;
  color: #fff !important;
  border: 1px solid #F0542C;
}

/* line 22, ../../Arafath/CL/Cl November/226. Construction/HTML/scss/_btn.scss */
.boxed-btn:focus {
  outline: none;
}

/* line 25, ../../Arafath/CL/Cl November/226. Construction/HTML/scss/_btn.scss */
.boxed-btn.large-width {
  width: 220px;
}

/* line 29, ../../Arafath/CL/Cl November/226. Construction/HTML/scss/_btn.scss */
.boxed-btn3 {
  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#001D38+0,fd8e5e+100 */
  background: #F0542C;
  /* IE6-9 */
  color: #fff;
  display: inline-block;
  padding: 19px 50px;
  font-family: "Raleway", sans-serif;
  font-size: 14px;
  border: 0;
  -webkit-border-radius: 0px;
  -moz-border-radius: 0px;
  border-radius: 0px;
  text-align: center;
  color: #fff;
  text-transform: uppercase;
  -webkit-transition: 0.3s;
  -moz-transition: 0.3s;
  -o-transition: 0.3s;
  transition: 0.3s;
  cursor: pointer;
  font-weight: 600;
}

/* line 47, ../../Arafath/CL/Cl November/226. Construction/HTML/scss/_btn.scss */
.boxed-btn3:hover {
  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#001D38+0,fd8e5e+100 */
  background: #001D38;
  /* IE6-9 */
  color: #fff !important;
}

/* line 53, ../../Arafath/CL/Cl November/226. Construction/HTML/scss/_btn.scss */
.boxed-btn3:focus {
  outline: none;
}

/* line 56, ../../Arafath/CL/Cl November/226. Construction/HTML/scss/_btn.scss */
.boxed-btn3.large-width {
  width: 220px;
}

/* line 61, ../../Arafath/CL/Cl November/226. Construction/HTML/scss/_btn.scss */
.boxed-btn3-white {
  color: #fff;
  display: inline-block;
  padding: 13px 27px;
  font-family: "Raleway", sans-serif;
  font-size: 14px;
  font-weight: 400;
  border: 0;
  border: 1px solid #fff;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
  text-align: center;
  color: #fff !important;
  text-transform: capitalize;
  -webkit-transition: 0.5s;
  -moz-transition: 0.5s;
  -o-transition: 0.5s;
  transition: 0.5s;
  cursor: pointer;
  letter-spacing: 2px;
}

/* line 78, ../../Arafath/CL/Cl November/226. Construction/HTML/scss/_btn.scss */
.boxed-btn3-white:hover {
  background: #28AE61;
  color: #fff !important;
  border: 1px solid transparent;
}

/* line 83, ../../Arafath/CL/Cl November/226. Construction/HTML/scss/_btn.scss */
.boxed-btn3-white i {
  margin-right: 2px;
}

/* line 86, ../../Arafath/CL/Cl November/226. Construction/HTML/scss/_btn.scss */
.boxed-btn3-white:focus {
  outline: none;
}

/* line 89, ../../Arafath/CL/Cl November/226. Construction/HTML/scss/_btn.scss */
.boxed-btn3-white.large-width {
  width: 220px;
}

/* line 94, ../../Arafath/CL/Cl November/226. Construction/HTML/scss/_btn.scss */
.boxed-btn3-line {
  color: #fff !important;
  display: inline-block;
  padding: 14px 47px;
  font-family: "Raleway", sans-serif;
  font-size: 14px;
  font-weight: 500;
  border: 0;
  border: 1px solid #001D38;
  -webkit-border-radius: 0px;
  -moz-border-radius: 0px;
  border-radius: 0px;
  text-align: center;
  text-transform: capitalize;
  -webkit-transition: 0.5s;
  -moz-transition: 0.5s;
  -o-transition: 0.5s;
  transition: 0.5s;
  background: #001D38;
  cursor: pointer;
  letter-spacing: 2px;
}

/* line 111, ../../Arafath/CL/Cl November/226. Construction/HTML/scss/_btn.scss */
.boxed-btn3-line:hover {
  color: #001D38 !important;
  border: 1px solid #001D38;
  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#001D38+0,fd8e5e+100 */
  background: #fff;
}

/* line 117, ../../Arafath/CL/Cl November/226. Construction/HTML/scss/_btn.scss */
.boxed-btn3-line:focus {
  outline: none;
}

/* line 120, ../../Arafath/CL/Cl November/226. Construction/HTML/scss/_btn.scss */
.boxed-btn3-line.large-width {
  width: 220px;
}
/* ... */

